--- a/pages/auth/alterar-senha/alterarsenha2.html
+++ b/pages/auth/alterar-senha/alterarsenha2.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../../../img/favicon.ico" type="image/x-icon">
-    <title>Farma Vite</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../../../style/auth/alterar-senha/alterarsenha2.css">
+        <link rel="shortcut icon" href="../../../img/favicon.ico" type="image/x-icon">
+        <title>Farma Vite</title>
+    </head>
+    <body>
+        <div>
+        <div>
+            <h1>Alterar senha</h1>
+        </div>
+        <div>
+            <h3>Informe o codigo</h3>
+            <form action="#">
+                <div>
+                    <br>
+                    <input class="radius-formulario" type="text" id="text" name="codigo" required>
+                    <input class="radius-formulario" type="text" id="text" name="codigo" required>
+                    <input class="radius-formulario" type="text" id="text" name="codigo" required>
+                    <input class="radius-formulario" type="text" id="text" name="codigo" required>
+                    <input class="radius-formulario" type="text" id="text" name="codigo" required>
+                    <input class="radius-formulario" type="text" id="text" name="codigo" required>
+                </div>
+            </form>
+            <br>
+            <a href="alterarsenha3.html"><button>Continuar</button></a>
+        </div>
+    </div>
+    </body>
 </html>
