--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -16,7 +16,7 @@
                 </div>
                 <h2>Bem-Vindo de Volta!</h2>
                 <p class="subtitulo">Entre com sua conta para continuar</p>
-                <form action="" method="post">
+                <form action="#" method="post">
                     <div>
                         <label for="email">Email: </label>
                         <input class="radius-formulario" type="email" id="email" name="email" placeholder="Email" required>
@@ -29,7 +29,7 @@
                     <div opcoes>
                         <input type="checkbox" id="lembrar" name="lembrar" value="sim">
                         <label for="Lembrar dde mim">Lembrar de mim</label>
-                        <a href="alterarsenha.html">Esqueci minha senha</a>
+                        <a href="alterar-senha/alterarsenha.html">Esqueci minha senha</a>
                     </div>
                 </form>
                 <a href="../../index.html"><button>Entrar</button></a>
