--- a/pages/auth/alterarsenha.html
+++ b/pages/auth/alterarsenha.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../../../style/auth/alterar-senha/alterarsenha.css">
-        <link rel="shortcut icon" href="../../../img/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="../../style/auth/alterarsenha.css">
+        <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
         <title>Farma Vite</title>
     </head>
     <body>
