--- a/pages/usuario/login.html
+++ b/pages/usuario/login.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../../style/auth/login.css">
+        <link rel="stylesheet" href="../../style/usuario/login.css">
         <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
         <title>Farma Vite</title>
     </head>
