--- a/pages/usuario/private/dados.html
+++ b/pages/usuario/private/dados.html
@@ -14,12 +14,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
       integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLMDJzLQQ7eN7G+W4wYwYn2A1UjR2g/8sBw8F4ZfO9Q5jM2jA9L5Fv/FwA1DqA=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer" 
+      referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="../../style/usuario/dados.css" />
+    <link rel="stylesheet" href="../../../style/usuario/private/dados.css" />
     <link
       rel="shortcut icon"
-      href="../../img/favicon.ico"
+      href="../../../img/favicon.ico"
       type="image/x-icon"
     />
     <title>FarmaVite</title>
@@ -204,92 +204,93 @@
         </div>
       </div>
     </main>
-
-    <footer class="main-footer">
-      <div class="container">
-        <div class="row pb-4 g-4">
-          <div class="col-md-4 col-lg-3">
-            <div class="footer-logo">FarmaVite</div>
-            <p class="text-white-50">
+        <footer class="text-white pt-5 pb-3 custom-bg-dark">
+            <div class="container grade-rodape pb-4">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="logo fs-4 fw-bold mb-3">
+              <i class="fas fa-prescription-bottle-alt me-1"></i> FarmaVite
+            </div>
+            <p class="small">
               A plataforma que conecta você às melhores farmácias da sua região
               com entrega rápida e segura.
             </p>
-            <div class="d-flex social-icons mt-3">
-              <a href="#" class="text-white me-3"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a href="#" class="text-white me-3"
-                ><i class="fab fa-instagram"></i
-              ></a>
-              <a href="#" class="text-white"><i class="fab fa-youtube"></i></a>
+            <div class="links-sociais mt-3 fs-5">
+              <i class="fab fa-facebook-f me-3"></i>
+              <i class="fab fa-instagram me-3"></i>
+              <i class="fab fa-twitter me-3"></i>
+              <i class="fab fa-youtube"></i>
             </div>
           </div>
-
-          <div class="col-md-2 col-lg-2">
-            <h5>Links Rápidos</h5>
-            <ul class="list-unstyled">
-              <li><a href="#">Farmácias</a></li>
-              <li><a href="#">Produtos</a></li>
-              <li><a href="#">Seja Entregador</a></li>
-              <li><a href="#">Seja Parceiro</a></li>
+          <div class="col-lg-2 col-md-6 mb-4">
+            <h5 class="fw-bold mb-3">Links Rápidos</h5>
+            <ul class="list-unstyled small">
+              <li>
+                <a href="#" class="text-decoration-none text-light"
+                  >Farmácias</a
+                >
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none text-light">Produtos</a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none text-light"
+                  >Seja Entregador</a
+                >
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none text-light"
+                  >Seja Parceiro</a
+                >
+              </li>
             </ul>
           </div>
-
-          <div class="col-md-3 col-lg-4">
-            <h5>Categorias</h5>
-            <div class="row">
-              <div class="col-6">
-                <ul class="list-unstyled">
-                  <li><a href="#">Medicamentos</a></li>
-                  <li><a href="#">Beleza</a></li>
-                  <li><a href="#">Bebê</a></li>
-                  <li><a href="#">Vitaminas</a></li>
-                </ul>
-              </div>
-              <div class="col-6">
-                <ul class="list-unstyled">
-                  <li><a href="#">Higiene</a></li>
-                  <li><a href="#">Demarto</a></li>
-                  <li><a href="#">Saúde</a></li>
-                  <li><a href="#">Consultas</a></li>
-                </ul>
-              </div>
+          <div class="col-lg-3 col-md-6 mb-4">
+            <h5 class="fw-bold mb-3">Categorias</h5>
+            <div class="d-flex small">
+              <ul class="list-unstyled me-4">
+                <li>Medicamentos</li>
+                <li>Beleza</li>
+                <li>Bebê</li>
+                <li>Vitaminas</li>
+              </ul>
+              <ul class="list-unstyled">
+                <li>Higiene</li>
+                <li>Demarto</li>
+                <li>Saúde</li>
+                <li>Consultas</li>
+              </ul>
             </div>
           </div>
-
-          <div class="col-md-3 col-lg-3">
-            <h5>Contato</h5>
-            <p class="d-flex align-items-center">
-              <i class="fas fa-phone-alt me-2 text-white-50"></i> (11) 3000-3000
-            </p>
-            <p class="d-flex align-items-center">
-              <i class="fas fa-envelope me-2 text-white-50"></i>
-              contato@farmavite.com
-            </p>
-            <p class="d-flex align-items-center">
-              <i class="fas fa-map-marker-alt me-2 text-white-50"></i> São
-              Paulo, SP
-            </p>
+          <div class="col-lg-3 col-md-6 mb-4">
+            <h5 class="fw-bold mb-3">Contato</h5>
+            <ul class="list-unstyled small">
+              <li><i class="fas fa-phone me-2"></i> (11) 3000-3000</li>
+              <li>
+                <i class="fas fa-envelope me-2"></i> contato@farmavite.com
+              </li>
+              <li><i class="fas fa-map-marker-alt me-2"></i> São Paulo, SP</li>
+            </ul>
           </div>
         </div>
       </div>
-
-      <div class="footer-bottom">
+      <div class="rodape-inferior bg-dark-blue py-3 small">
         <div
-          class="container d-flex justify-content-between align-items-center"
+          class="container d-flex justify-content-between flex-column flex-md-row text-center"
         >
-          <p class="m-0 text-white-50">
-            &copy; 2024 FarmaVite. Todos os direitos reservados.
-          </p>
-          <div class="footer-links">
-            <a href="#" class="text-white-50">Termos de Uso</a>
-            <a href="#" class="text-white-50">Política de Privacidade</a>
-            <a href="#" class="text-white-50">Ajuda</a>
+          <p class="mb-0">© 2024 FarmaVite. Todos os direitos reservados.</p>
+          <div class="links-politicas mt-2 mt-md-0">
+            <a href="#" class="text-white text-decoration-none me-3"
+              >Termos de Uso</a
+            >
+            <a href="#" class="text-white text-decoration-none me-3"
+              >Política de Privacidade</a
+            >
+            <a href="#" class="text-white text-decoration-none">Ajuda</a>
           </div>
         </div>
       </div>
     </footer>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
