--- a/pages/usuario/public/compra/pedidos.html
+++ b/pages/usuario/public/compra/pedidos.html
@@ -11,30 +11,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="../../../style/usuario/compra/pedidos.css" />
+    <link rel="stylesheet" href="../../../../style/usuario/public/compra/pedidos.css" />
     <link
       rel="shortcut icon"
-      href="../../../img/favicon.ico"
+      href="../../../../img/favicon.ico"
       type="image/x-icon"
     />
     <title>FarmaVite</title>
   </head>
-  <!DOCTYPE html>
-  <html lang="pt-BR">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Meus Pedidos - FarmaVite</title>
-      <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-      />
-      <link rel="stylesheet" href="styles.css" />
-      <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-      />
-    </head>
     <body>
       <nav
         class="navbar navbar-expand-lg bg-white border-bottom custom-navbar-border"
@@ -229,104 +213,93 @@
           </div>
         </div>
       </main>
-
-      <footer class="custom-bg-dark text-white mt-5 pt-5 pb-3">
-        <div class="container-fluid px-5">
-          <div class="row">
-            <div class="col-md-3 mb-4">
-              <p class="fw-bold fs-5 mb-3">FarmaVite</p>
-              <p class="small custom-text-footer">
-                A plataforma que conecta você às melhores farmácias da sua
-                região com entrega rápida e segura.
-              </p>
-              <div class="d-flex mt-3">
-                <a href="#" class="text-white me-3"
-                  ><i class="bi bi-facebook fs-5"></i
-                ></a>
-                <a href="#" class="text-white me-3"
-                  ><i class="bi bi-instagram fs-5"></i
-                ></a>
-                <a href="#" class="text-white me-3"
-                  ><i class="bi bi-twitter fs-5"></i
-                ></a>
-                <a href="#" class="text-white me-3"
-                  ><i class="bi bi-youtube fs-5"></i
-                ></a>
-              </div>
+          <footer class="text-white pt-5 pb-3 custom-bg-dark">
+            <div class="container grade-rodape pb-4">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="logo fs-4 fw-bold mb-3">
+              <i class="fas fa-prescription-bottle-alt me-1"></i> FarmaVite
             </div>
-
-            <div class="col-md-3 mb-4">
-              <p class="fw-bold mb-3">Links Rápidos</p>
-              <ul class="list-unstyled small">
-                <li><a href="#" class="custom-link-footer">Farmácias</a></li>
-                <li><a href="#" class="custom-link-footer">Produtos</a></li>
-                <li>
-                  <a href="#" class="custom-link-footer">Seja Entregador</a>
-                </li>
-                <li>
-                  <a href="#" class="custom-link-footer">Seja Parceiro</a>
-                </li>
+            <p class="small">
+              A plataforma que conecta você às melhores farmácias da sua região
+              com entrega rápida e segura.
+            </p>
+            <div class="links-sociais mt-3 fs-5">
+              <i class="fab fa-facebook-f me-3"></i>
+              <i class="fab fa-instagram me-3"></i>
+              <i class="fab fa-twitter me-3"></i>
+              <i class="fab fa-youtube"></i>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-6 mb-4">
+            <h5 class="fw-bold mb-3">Links Rápidos</h5>
+            <ul class="list-unstyled small">
+              <li>
+                <a href="#" class="text-decoration-none text-light"
+                  >Farmácias</a
+                >
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none text-light">Produtos</a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none text-light"
+                  >Seja Entregador</a
+                >
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none text-light"
+                  >Seja Parceiro</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4">
+            <h5 class="fw-bold mb-3">Categorias</h5>
+            <div class="d-flex small">
+              <ul class="list-unstyled me-4">
+                <li>Medicamentos</li>
+                <li>Beleza</li>
+                <li>Bebê</li>
+                <li>Vitaminas</li>
+              </ul>
+              <ul class="list-unstyled">
+                <li>Higiene</li>
+                <li>Demarto</li>
+                <li>Saúde</li>
+                <li>Consultas</li>
               </ul>
             </div>
-
-            <div class="col-md-3 mb-4">
-              <p class="fw-bold mb-3">Categorias</p>
-              <div class="row small">
-                <div class="col-6">
-                  <ul class="list-unstyled">
-                    <li>
-                      <a href="#" class="custom-link-footer">Medicamentos</a>
-                    </li>
-                    <li><a href="#" class="custom-link-footer">Beleza</a></li>
-                    <li><a href="#" class="custom-link-footer">Bebê</a></li>
-                    <li>
-                      <a href="#" class="custom-link-footer">Vitaminas</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-6">
-                  <ul class="list-unstyled">
-                    <li><a href="#" class="custom-link-footer">Higiene</a></li>
-                    <li><a href="#" class="custom-link-footer">Dermato</a></li>
-                    <li><a href="#" class="custom-link-footer">Saúde</a></li>
-                    <li>
-                      <a href="#" class="custom-link-footer">Consultas</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-3 mb-4">
-              <p class="fw-bold mb-3">Contato</p>
-              <p class="small mb-1">
-                <i class="bi bi-telephone-fill me-2"></i> (11) 3000-3000
-              </p>
-              <p class="small mb-1">
-                <i class="bi bi-envelope-fill me-2"></i> contato@farmavite.com
-              </p>
-              <p class="small">
-                <i class="bi bi-geo-alt-fill me-2"></i> São Paulo, SP
-              </p>
-            </div>
           </div>
-
-          <hr class="custom-hr-footer" />
-          <div
-            class="d-flex justify-content-between align-items-center pt-2 small"
-          >
-            <p class="mb-0">© 2024 FarmaVite. Todos os direitos reservados.</p>
-            <div class="d-flex">
-              <a href="#" class="custom-link-footer me-3">Termos de Uso</a>
-              <a href="#" class="custom-link-footer me-3"
-                >Política de Privacidade</a
-              >
-              <a href="#" class="custom-link-footer">Ajuda</a>
-            </div>
+          <div class="col-lg-3 col-md-6 mb-4">
+            <h5 class="fw-bold mb-3">Contato</h5>
+            <ul class="list-unstyled small">
+              <li><i class="fas fa-phone me-2"></i> (11) 3000-3000</li>
+              <li>
+                <i class="fas fa-envelope me-2"></i> contato@farmavite.com
+              </li>
+              <li><i class="fas fa-map-marker-alt me-2"></i> São Paulo, SP</li>
+            </ul>
           </div>
         </div>
-      </footer>
-
+      </div>
+      <div class="rodape-inferior bg-dark-blue py-3 small">
+        <div
+          class="container d-flex justify-content-between flex-column flex-md-row text-center"
+        >
+          <p class="mb-0">© 2024 FarmaVite. Todos os direitos reservados.</p>
+          <div class="links-politicas mt-2 mt-md-0">
+            <a href="#" class="text-white text-decoration-none me-3"
+              >Termos de Uso</a
+            >
+            <a href="#" class="text-white text-decoration-none me-3"
+              >Política de Privacidade</a
+            >
+            <a href="#" class="text-white text-decoration-none">Ajuda</a>
+          </div>
+        </div>
+      </div>
+    </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
   </html>
