--- a/pages/usuario/public/produtos/explorarprodutos.html
+++ b/pages/usuario/public/produtos/explorarprodutos.html
@@ -15,19 +15,17 @@
     />
     <link
       rel="stylesheet"
-      href="../../../style/usuario/produtos/explorarprodutos.css"
+      href="../../../../style/usuario/public/produtos/explorarprodutos.css"
     />
     <link
       rel="shortcut icon"
-      href="../../../img/favicon.ico"
+      href="../../../../img/favicon.ico"
       type="image/x-icon"
     />
     <title>FarmaVite</title>
   </head>
   <body>
-    <header
-      class="navbar navbar-expand-lg navbar-light bg-white border-bottom shadow-sm"
-    >
+    <nav class="navbar navbar-expand-lg bg-white border-bottom py-3">
       <div class="container">
         <a class="navbar-brand logo" href="#">
           <i class="fas fa-prescription-bottle-alt me-1"></i> FarmaVite
@@ -73,7 +71,8 @@
           <a href="#" class="btn btn-primary">Cadastrar</a>
         </div>
       </div>
-    </header>
+    </nav>
+
     <main class="conteudo-principal container py-4">
       <div class="d-flex justify-content-start mb-4 filtros-ordenacao">
         <div class="dropdown me-3">
@@ -378,8 +377,8 @@
         </div>
       </div>
     </main>
-    <footer class="rodape bg-primary text-white pt-5 mt-5">
-      <div class="container grade-rodape pb-4">
+        <footer class="text-white pt-5 pb-3 custom-bg-dark">
+            <div class="container grade-rodape pb-4">
         <div class="row">
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="logo fs-4 fw-bold mb-3">
