--- a/pages/usuario/private/dados.html
+++ b/pages/usuario/private/dados.html
@@ -25,53 +25,7 @@
     <title>FarmaVite</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-white border-bottom py-3">
-      <div class="container">
-        <a class="navbar-brand logo" href="#">
-          <i class="fas fa-prescription-bottle-alt me-1"></i> FarmaVite
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Alternar navegação"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="collapse navbar-collapse justify-content-center"
-          id="navbarNav"
-        >
-          <ul class="navbar-nav mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="#">Farmácias</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Produtos</a></li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Seja Entregador</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Seja Parceiro</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Meus Pedidos</a>
-            </li>
-          </ul>
-        </div>
-        <div class="d-flex align-items-center">
-          <a href="#" class="btn me-3 icone-btn"><i class="fas fa-user"></i></a>
-          <a href="#" class="btn me-3 carrinho-btn position-relative">
-            <i class="fas fa-shopping-cart"></i>
-            <span
-              class="position-absolute top-0 start-100 translate-middle badge rounded-circle bg-primary contagem-carrinho"
-              >1</span
-            >
-          </a>
-          <a href="#" class="btn btn-primary">Cadastrar</a>
-        </div>
-      </div>
-    </nav>
+    <div data-include="/pages/usuario/public/nav.html"></div>
     <main class="container py-5">
       <h1 class="page-title">Meus Dados</h1>
 
@@ -204,97 +158,12 @@
         </div>
       </div>
     </main>
-        <footer class="text-white pt-5 pb-3 custom-bg-dark">
-            <div class="container grade-rodape pb-4">
-        <div class="row">
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="logo fs-4 fw-bold mb-3">
-              <i class="fas fa-prescription-bottle-alt me-1"></i> FarmaVite
-            </div>
-            <p class="small">
-              A plataforma que conecta você às melhores farmácias da sua região
-              com entrega rápida e segura.
-            </p>
-            <div class="links-sociais mt-3 fs-5">
-              <i class="fab fa-facebook-f me-3"></i>
-              <i class="fab fa-instagram me-3"></i>
-              <i class="fab fa-twitter me-3"></i>
-              <i class="fab fa-youtube"></i>
-            </div>
-          </div>
-          <div class="col-lg-2 col-md-6 mb-4">
-            <h5 class="fw-bold mb-3">Links Rápidos</h5>
-            <ul class="list-unstyled small">
-              <li>
-                <a href="#" class="text-decoration-none text-light"
-                  >Farmácias</a
-                >
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none text-light">Produtos</a>
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none text-light"
-                  >Seja Entregador</a
-                >
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none text-light"
-                  >Seja Parceiro</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-4">
-            <h5 class="fw-bold mb-3">Categorias</h5>
-            <div class="d-flex small">
-              <ul class="list-unstyled me-4">
-                <li>Medicamentos</li>
-                <li>Beleza</li>
-                <li>Bebê</li>
-                <li>Vitaminas</li>
-              </ul>
-              <ul class="list-unstyled">
-                <li>Higiene</li>
-                <li>Demarto</li>
-                <li>Saúde</li>
-                <li>Consultas</li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-4">
-            <h5 class="fw-bold mb-3">Contato</h5>
-            <ul class="list-unstyled small">
-              <li><i class="fas fa-phone me-2"></i> (11) 3000-3000</li>
-              <li>
-                <i class="fas fa-envelope me-2"></i> contato@farmavite.com
-              </li>
-              <li><i class="fas fa-map-marker-alt me-2"></i> São Paulo, SP</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="rodape-inferior bg-dark-blue py-3 small">
-        <div
-          class="container d-flex justify-content-between flex-column flex-md-row text-center"
-        >
-          <p class="mb-0">© 2024 FarmaVite. Todos os direitos reservados.</p>
-          <div class="links-politicas mt-2 mt-md-0">
-            <a href="#" class="text-white text-decoration-none me-3"
-              >Termos de Uso</a
-            >
-            <a href="#" class="text-white text-decoration-none me-3"
-              >Política de Privacidade</a
-            >
-            <a href="#" class="text-white text-decoration-none">Ajuda</a>
-          </div>
-        </div>
-      </div>
-    </footer>
+    <div class="data-include" src="/pages/usuario/private/footer.html"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="/js/includes.js"></script>
   </body>
 </html>
