--- a/pages/usuario/public/produtos/explorarprodutos.html
+++ b/pages/usuario/public/produtos/explorarprodutos.html
@@ -25,59 +25,13 @@
     <title>FarmaVite</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-white border-bottom py-3">
-      <div class="container">
-        <a class="navbar-brand logo" href="#">
-          <i class="fas fa-prescription-bottle-alt me-1"></i> FarmaVite
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Alternar navegação"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="collapse navbar-collapse justify-content-center"
-          id="navbarNav"
-        >
-          <ul class="navbar-nav mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="#">Farmácias</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Produtos</a></li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Seja Entregador</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Seja Parceiro</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Meus Pedidos</a>
-            </li>
-          </ul>
-        </div>
-        <div class="d-flex align-items-center">
-          <a href="#" class="btn me-3 icone-btn"><i class="fas fa-user"></i></a>
-          <a href="#" class="btn me-3 carrinho-btn position-relative">
-            <i class="fas fa-shopping-cart"></i>
-            <span
-              class="position-absolute top-0 start-100 translate-middle badge rounded-circle bg-primary contagem-carrinho"
-              >1</span
-            >
-          </a>
-          <a href="#" class="btn btn-primary">Cadastrar</a>
-        </div>
-      </div>
-    </nav>
+    <div data-include="/pages/usuario/public/nav.html"></div>
 
-    <main class="conteudo-principal container py-4">
-      <div class="d-flex justify-content-start mb-4 filtros-ordenacao">
+  <main class="container py-4">
+  <div class="d-flex justify-content-start mb-4">
         <div class="dropdown me-3">
           <button
-            class="btn btn-light dropdown-toggle filtro-btn"
+            class="btn btn-light dropdown-toggle"
             type="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
@@ -92,7 +46,7 @@
         </div>
         <div class="dropdown">
           <button
-            class="btn btn-light dropdown-toggle filtro-btn"
+            class="btn btn-light dropdown-toggle"
             type="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
@@ -106,10 +60,10 @@
           </ul>
         </div>
       </div>
-      <div class="row g-4 lista-produtos">
+  <div class="row g-4">
         <div class="col-lg-3 col-md-6">
-          <div class="card cartao-produto">
-            <div class="cabecalho-farmacia d-flex align-items-center mb-2 p-3">
+          <div class="card">
+            <div class="d-flex align-items-center mb-2 p-3">
               <span class="icone-farmacia me-2 fw-bold text-white bg-dark"
                 >DC</span
               >
@@ -141,8 +95,8 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
-          <div class="card cartao-produto">
-            <div class="cabecalho-farmacia d-flex align-items-center mb-2 p-3">
+            <div class="card">
+              <div class="d-flex align-items-center mb-2 p-3">
               <span class="icone-farmacia me-2 fw-bold text-white bg-success"
                 >DS</span
               >
@@ -174,8 +128,8 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
-          <div class="card cartao-produto">
-            <div class="cabecalho-farmacia d-flex align-items-center mb-2 p-3">
+            <div class="card">
+              <div class="d-flex align-items-center mb-2 p-3">
               <span class="icone-farmacia me-2 fw-bold text-white bg-danger"
                 >FV</span
               >
@@ -207,8 +161,8 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
-          <div class="card cartao-produto">
-            <div class="cabecalho-farmacia d-flex align-items-center mb-2 p-3">
+            <div class="card">
+              <div class="d-flex align-items-center mb-2 p-3">
               <span class="icone-farmacia me-2 fw-bold text-white bg-primary"
                 >SP</span
               >
@@ -242,8 +196,8 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
-          <div class="card cartao-produto">
-            <div class="cabecalho-farmacia d-flex align-items-center mb-2 p-3">
+            <div class="card">
+              <div class="d-flex align-items-center mb-2 p-3">
               <span class="icone-farmacia me-2 fw-bold text-white bg-warning"
                 >FM</span
               >
@@ -275,8 +229,8 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
-          <div class="card cartao-produto">
-            <div class="cabecalho-farmacia d-flex align-items-center mb-2 p-3">
+            <div class="card">
+              <div class="d-flex align-items-center mb-2 p-3">
               <span class="icone-farmacia me-2 fw-bold text-white bg-info"
                 >DE</span
               >
@@ -308,8 +262,8 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
-          <div class="card cartao-produto">
-            <div class="cabecalho-farmacia d-flex align-items-center mb-2 p-3">
+            <div class="card">
+              <div class="d-flex align-items-center mb-2 p-3">
               <span class="icone-farmacia me-2 fw-bold text-white bg-success"
                 >FP</span
               >
@@ -341,8 +295,8 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
-          <div class="card cartao-produto">
-            <div class="cabecalho-farmacia d-flex align-items-center mb-2 p-3">
+            <div class="card">
+              <div class="d-flex align-items-center mb-2 p-3">
               <span class="icone-farmacia me-2 fw-bold text-white bg-danger"
                 >FE</span
               >
@@ -377,97 +331,12 @@
         </div>
       </div>
     </main>
-        <footer class="text-white pt-5 pb-3 custom-bg-dark">
-            <div class="container grade-rodape pb-4">
-        <div class="row">
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="logo fs-4 fw-bold mb-3">
-              <i class="fas fa-prescription-bottle-alt me-1"></i> FarmaVite
-            </div>
-            <p class="small">
-              A plataforma que conecta você às melhores farmácias da sua região
-              com entrega rápida e segura.
-            </p>
-            <div class="links-sociais mt-3 fs-5">
-              <i class="fab fa-facebook-f me-3"></i>
-              <i class="fab fa-instagram me-3"></i>
-              <i class="fab fa-twitter me-3"></i>
-              <i class="fab fa-youtube"></i>
-            </div>
-          </div>
-          <div class="col-lg-2 col-md-6 mb-4">
-            <h5 class="fw-bold mb-3">Links Rápidos</h5>
-            <ul class="list-unstyled small">
-              <li>
-                <a href="#" class="text-decoration-none text-light"
-                  >Farmácias</a
-                >
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none text-light">Produtos</a>
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none text-light"
-                  >Seja Entregador</a
-                >
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none text-light"
-                  >Seja Parceiro</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-4">
-            <h5 class="fw-bold mb-3">Categorias</h5>
-            <div class="d-flex small">
-              <ul class="list-unstyled me-4">
-                <li>Medicamentos</li>
-                <li>Beleza</li>
-                <li>Bebê</li>
-                <li>Vitaminas</li>
-              </ul>
-              <ul class="list-unstyled">
-                <li>Higiene</li>
-                <li>Demarto</li>
-                <li>Saúde</li>
-                <li>Consultas</li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-4">
-            <h5 class="fw-bold mb-3">Contato</h5>
-            <ul class="list-unstyled small">
-              <li><i class="fas fa-phone me-2"></i> (11) 3000-3000</li>
-              <li>
-                <i class="fas fa-envelope me-2"></i> contato@farmavite.com
-              </li>
-              <li><i class="fas fa-map-marker-alt me-2"></i> São Paulo, SP</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="rodape-inferior bg-dark-blue py-3 small">
-        <div
-          class="container d-flex justify-content-between flex-column flex-md-row text-center"
-        >
-          <p class="mb-0">© 2024 FarmaVite. Todos os direitos reservados.</p>
-          <div class="links-politicas mt-2 mt-md-0">
-            <a href="#" class="text-white text-decoration-none me-3"
-              >Termos de Uso</a
-            >
-            <a href="#" class="text-white text-decoration-none me-3"
-              >Política de Privacidade</a
-            >
-            <a href="#" class="text-white text-decoration-none">Ajuda</a>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+    <div data-include="/pages/usuario/public/footer.html"></div>
+        <script
+          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+          crossorigin="anonymous"
+        ></script>
+        <script src="/js/includes.js"></script>
   </body>
 </html>
